--- a/home1.html
+++ b/home1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="grid.css">
+    <script src="home.js"></script>
 </head>
 <body>
 
@@ -55,9 +56,9 @@
 <div class="col-12 findTable">
       <form action="" method="post" class="home_form">
 
-          <div class="col-4">
+        <div class="col-3">
             <div class="col-4-location" >
-                 <h3>Search based on your current location</h3><br>
+                 <h3>Search based on your current location</h3>
                 <a href="Location.html" class="footer">
                     <img class="center" src="images/map.png" class = "location1">
                 </a>
@@ -76,7 +77,7 @@
             </div>
           </div>
 
-          <div class="col-4" id = "main_search">
+          <div class="col-6" id = "main_search">
                 <h1 >Find your table</h1><br>
                 <label class="labels" for="date">Date</label><br>
                 <input type="date" id="date" name="date" class="Buxa"><br>
@@ -89,13 +90,15 @@
                 <button class="button1" type="submit">Find me a SIT</button>
           </div>
 
-          <div class="col-4" id = right_photos>
-                <img src="images/asian.PNG"  class="center"><br>
-                <img src="images/beit_kandinof.PNG" class="center"><br>
-                <img src="images/wine.PNG" class="center"><br>
-                <img src="images/food.PNG" class="center"><br>
+          <div class="col-3" id = right_photos>
+                <img src="images/asian.PNG"  class="center" id="images" ><br>
+                <img src="images/beit_kandinof.PNG" class="center" ><br>
+                <img src="images/wine.PNG" class="center" ><br>
+                <img src="images/food.PNG" class="center" ><br>
                 <img src="images/gaia_garden.png" class="center"><br>
+                <button class="button1" onclick="Motion()">More Photos</button>
           </div>
+
 
       </form>
 </div>
