--- a/home1.html
+++ b/home1.html
@@ -8,12 +8,27 @@
 </head>
 <body>
 
+
+<!-------- geolocation -------->
+<script>
+     const successCallback = (position) => {
+       console.log(position);
+     };
+     const errorCallback= (error) => {
+       console.log(error);
+     };
+     navigator.geolocation.getCurrentPosition(successCallback, errorCallback, {
+      enableHighAccuracy: true
+     });
+
+</script>
+
 <!-------- Welcome bar -------->
 
 <div class="col-12-bar">
         <div class="col-2-bar">
             <a href="home1.html">
-                <img src="images/logo.PNG" id = "logo">
+                <img src="images/logo.PNG" class = "logo">
             </a>
         </div>
 
@@ -80,23 +95,22 @@
           <div class="col-6" id = "main_search">
                 <h1 >Find your table</h1><br>
                 <label class="labels" for="date">Date</label><br>
-                <input type="date" id="date" name="date" class="Buxa"><br>
+                <input type="date" id="date" name="date"><br>
                 <label class="labels" for="time">Time</label><br>
-                <input type="time" id="time" name="time" class="Buxa"><br>
+                <input type="time" id="time" name="time"><br>
                 <label class="labels" for="num_people">People</label><br>
-                <input id = "num_people" type="number" name="number" class="Buxa"><br>
+                <input id = "num_people" type="number" name="number"><br>
                 <label class="labels" for="location">Location</label><br>
-                <input id = "location" type="location" name="location" class="Buxa"><br><br>
+                <input id = "location" type="location" name="location"><br><br>
                 <button class="button1" type="submit">Find me a SIT</button>
           </div>
 
           <div class="col-3" id = right_photos>
-                <img src="images/asian.PNG"  class="center" id="images" ><br>
+                <img src="images/asian.PNG" class="center"><br>
                 <img src="images/beit_kandinof.PNG" class="center" ><br>
                 <img src="images/wine.PNG" class="center" ><br>
                 <img src="images/food.PNG" class="center" ><br>
                 <img src="images/gaia_garden.png" class="center"><br>
-                <button class="button1" onclick="Motion()">More Photos</button>
           </div>
 
 
@@ -109,10 +123,11 @@
 
     <div class="col-4-footer">
         <div class="col-12-footer">
-          <h1 id="FootCont">Contact us<br>052-5225280</h1>
+            <img src="images/logo.PNG" class = "logo"><br>
+            <h1 id="FootCont">Contact us - 052-5225280</h1>
         </div>
         <div class="col-12-footer">
-          <button class="button1_left" onclick="topFunction()" style="width:50%" id="topFunction" title="Back to top">Back to top</button>
+          <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
         </div>
     </div>
 
