--- a/Sign Up form.html
+++ b/Sign Up form.html
@@ -16,38 +16,40 @@
 
     <div class="container">
         <div class="header">
-            <h2>Create Account</h2>
+            <h2>Join SitMe</h2>
         </div>
-        <form id="form" class="form">
+       <form id="form" class="form">
             <div class="form-control">
-                <label for="username">Username</label>
-                <input type="text" placeholder="example77" id="username" />
+             <label for="username"></label>
+                <input type="text" placeholder="User Name" id="username" />
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
-                <label for="username">Email</label>
-                <input type="email" placeholder="example@sitme.com" id="email" />
+                <label for="username"></label>
+                <input type="email" placeholder="Email" id="email" />
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
-                <label for="username">Password</label>
-                <input type="password" placeholder="Password" id="password"/>
+                <label for="username"></label>
+                <input type="password" placeholder=" Enter Password" id="password"/>
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
-                <label for="username">Confirm Password</label>
+                <label for="username"></label>
                 <input type="password" placeholder="Confirm password" id="password2"/>
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
+           <input type="checkbox"><small>I agree to SitMe privacy policy and terms of service</small>
             <button>Sign Up</button>
+          
         </form>
     </div>
 
