--- a/Sign Up form.html
+++ b/Sign Up form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
-    <title>SignUp</title>
+    <title>Sign Up</title>
 
 
 </head>
@@ -16,7 +16,7 @@
 
     <div class="container">
         <div class="header">
-            <h2>Join SitMe</h2>
+            <h2>Welcome to SitMe!</h2>
         </div>
        <form id="form" class="form">
             <div class="form-control">
@@ -42,13 +42,15 @@
             </div>
             <div class="form-control">
                 <label for="username"></label>
-                <input type="password" placeholder="Confirm password" id="password2"/>
+                <input type="password" placeholder="Confirm Password" id="password2"/>
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
-           <input type="checkbox"><small>I agree to SitMe privacy policy and terms of service</small>
-            <button>Sign Up</button>
+           <input type="checkbox" name="checkbox" id="checkbox_id" value="value">
+<label id ="cb" for="checkbox_id">I agree to SitMe <a id = "tos" href="terms of use.html">Terms of Service</a></label>
+
+            <button>Create Account</button>
           
         </form>
     </div>
