--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="header_and_footer.css">
-    <link rel="stylesheet" href="signin.css">
+    <link rel="stylesheet" href="signup.css">
     <script src="home.js"></script>
     <title>login</title>
 </head>
@@ -54,36 +54,50 @@
 
 
 <!-------- Search -------->
+
 <div class="col-12 findTable">
         <div class="col-3">
 
         </div>
 
-<div class="col-6" id = "main_search">
+
+          <div class="col-6" id = "main_search">
              <div class="info">
                    <form action="action_page.php" style="border:none">
-                            <h2 class="title1">Log in</h2>
+                            <h2 class="title1">Join SitMe</h2>
                             <label for="email" class="labels">Email</label><br>
                             <input type="text" placeholder="Enter your email adress" id="email" required><br>
                             <label for="password" class="labels">Password</label><br>
                             <input type="password" placeholder="Select a password" id="password" required><br>
+                            <label for="pssword_repeat" class="labels"></b></label>
+                            <input type="password" placeholder="Confirm password" id="pssword_repeat" required><br>
                             <label for="name" class="labels">Full name</label><br>
                             <input type="text" placeholder="Insert full name" id="name" required><br>
+
+                            <label>
+                              <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+                            </label><br>
+
+                            <p>I agree to SitMe privacy policy and terms of service <br><a href="terms%20of%20use.html" style="color:dodgerblue">Terms & Privacy</a></p>
+                            <br>
+
                             <div class="clearfix">
-                                <button class="button1" type="submit" class="signupbtn">Log in</button>
+                                <button class="button1" type="submit" class="signupbtn">Sign up</button>
                             </div>
                             <br>
-                            <a href=signup.html>
-                                 <button class="button1" type="button">Create account</button>
-                            </a>
-              </form>
-          </div>
+            </form>
+        </div>
+
       </div>
 
-              <div class="col-3" id = right_photos>
+          <div class="col-3" id = right_photos>
 
           </div>
-    </div>
+
+
+      </form>
+</div>
+
 
 <!-------- footer -------->
 
