--- a/about.html
+++ b/about.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="header_and_footer.css">
+    <link rel="stylesheet" href="about.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Document</title>
+
 </head>
 <body>
-$END$
+
+<!-------- Welcome bar -------->
+
+<div class="col-12-bar">
+        <div class="col-2-bar">
+            <a href="home1.html">
+                <img src="images/logo.PNG" class = "logo">
+            </a>
+        </div>
+
+
+        <div class="col-2-bar">
+            <a href="MyReservation.html" class="footer">
+                <button class="headerBTN">My reservation</button>
+            </a>
+        </div>
+
+        <div class="col-2-bar">
+            <a href="LiveMap.html" class="footer">
+                <button class="headerBTN">Map</button>
+            </a>
+        </div>
+
+        <div class="col-2-bar">
+            <a href="About.html" class="footer">
+                <button class="headerBTN">About</button>
+            </a>
+        </div>
+
+        <div class="col-2-bar">
+            <a href="Help.html" class="footer">
+                <button class="headerBTN">Help</button>
+            </a>
+        </div>
+
+
+        <div class="col-2-bar">
+            <a href="signin.html" class="footer">
+                <button class="headerBTN" id="login">Log in/ Sign in</button>
+            </a>
+        </div>
+</div>
+
+
+<div class="col-12 findTable">
+    <img src="images/about.png" id="images">
+    <h1 id="About">Our story</h1>
+    <ul>
+                    In SiteMe We love what can happen around the restaurant table. And we are committed to empowering that experience. From helping restaurants of all sizes thrive, to enabling diners to find and book the perfect table for every occasion, our story is one of human connection—among diners and restaurants, and between restaurants and their communities.
+
+                    Now, we’re growing globally like never before, and continuing to lead the conversation in the tech and restaurant spaces with products that anticipate the ever-evolving needs of both restaurants and diners.
+
+                    With our passion for hospitality, we take pride in bringing together people and the restaurants they love in the moments that matter. Pull up a chair and join us.
+    </ul>
+    <div class="frame"></div>
+</div>
+
+
+<!-------- footer -------->
+
+<div class="col-12-footer">
+
+    <div class="col-4-footer">
+        <div class="col-12-footer">
+            <img src="images/logo.PNG" class = "logo"><br>
+            <h1 id="FootCont">Contact us - 052-5225280</h1>
+        </div>
+        <div class="col-12-footer">
+          <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
+        </div>
+    </div>
+
+    <div class="col-4-footer">
+        <div class="rowFooter">
+            <div class="col-12-footer">
+                <a href="otherPage.html" class="footer">
+                    <button class="footerBTN">My reservation</button>
+                </a>
+            </div>
+
+            <div class="col-12-footer">
+                <a href="flowersPage.html" class="footer">
+                    <button class="footerBTN">Map</button>
+                </a>
+            </div>
+
+            <div class="col-12-footer">
+                <a href="halotPage.html" class="footer">
+                    <button class="footerBTN">About</button>
+                </a>
+            </div>
+            <div class="col-12-footer">
+                <a href="about.html" class="footer">
+                    <button class="footerBTN">Help</button>
+                </a>
+
+            </div>
+
+        </div>
+
+    </div>
+    <div class="col-4-footer">
+
+
+    </div>
+</div>
 </body>
 </html>
