--- a/home1.html
+++ b/home1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="home_grid.css">
     <script src="home.js"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-2-bar">
-            <a href="LiveMap.html" class="footer">
+            <a href="liveMap.html" class="footer">
                 <button class="headerBTN">Map</button>
             </a>
         </div>
