--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="header_and_footer.css">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="sign.css">
     <script src="home.js"></script>
     <title>login</title>
 </head>
@@ -56,12 +56,12 @@
 <!-------- Search -------->
 
 <div class="col-12 findTable">
-        <div class="col-3">
+        <div class="col-4">
 
         </div>
 
 
-          <div class="col-6" id = "main_search">
+          <div class="col-4" id = "main_search">
              <div class="info">
                    <form action="action_page.php" style="border:none">
                             <h2 class="title1">Join SitMe</h2>
@@ -73,14 +73,11 @@
                             <input type="password" placeholder="Confirm password" id="pssword_repeat" required><br>
                             <label for="name" class="labels">Full name</label><br>
                             <input type="text" placeholder="Insert full name" id="name" required><br>
-
                             <label>
                               <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
                             </label><br>
-
                             <p>I agree to SitMe privacy policy and terms of service <br><a href="terms%20of%20use.html" style="color:dodgerblue">Terms & Privacy</a></p>
                             <br>
-
                             <div class="clearfix">
                                 <button class="button1" type="submit" class="signupbtn">Sign up</button>
                             </div>
@@ -90,7 +87,11 @@
 
       </div>
 
-          <div class="col-3" id = right_photos>
+          <div class="col-4" id = right_photos>
+                <img src="images/live_map1.PNG" class="center"><br>
+                <img src="images/wine.PNG" class="center" ><br>
+                <img src="images/liveMap2.PNG" class="center" ><br>
+                <img src="images/gaia_garden.png" class="center"><br>
 
           </div>
 
