--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="header_and_footer.css">
-    <link rel="stylesheet" href="signin.css">
+    <link rel="stylesheet" href="sign.css">
     <script src="home.js"></script>
     <title>login</title>
 </head>
