--- a/about.html
+++ b/about.html
@@ -55,17 +55,20 @@
 </div>
 
 
+
 <div class="col-12 findTable">
-    <img src="images/about.png" id="images">
-    <h1 id="About">Our story</h1>
-    <ul>
+         <div class="col-8">
+              <h1 id="About">Our story</h1>
+                   <ul>
                     In SiteMe We love what can happen around the restaurant table. And we are committed to empowering that experience. From helping restaurants of all sizes thrive, to enabling diners to find and book the perfect table for every occasion, our story is one of human connection—among diners and restaurants, and between restaurants and their communities.
 
                     Now, we’re growing globally like never before, and continuing to lead the conversation in the tech and restaurant spaces with products that anticipate the ever-evolving needs of both restaurants and diners.
 
                     With our passion for hospitality, we take pride in bringing together people and the restaurants they love in the moments that matter. Pull up a chair and join us.
-    </ul>
-    <div class="frame"></div>
+                   </ul>
+         <div class="frame" id="images"></div>
+         <img src="images/about.png">
+    </div>
 </div>
 
 
