--- a/SearchResults.html
+++ b/SearchResults.html
@@ -119,17 +119,17 @@
                 </div><br>
                             
                 <div class="resturant">
-                    <div class="col-2">
+                    <div class="col-3">
                         <div class="images">
-                            <img src="images/thaihouse.png" alt="Thai_House" style="width: 80%;" > 
+                            <img src="images/thaihouse.png" alt="Thai_House" style="width: 80%;" >
                         </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-6">
                         <div class="text">
                             <h1>Thai House</h1>
                             <p>
-                                Asian &#9679 50 and over &#9679 Tel Aviv                               
-                            </p> 
+                                Asian &#9679 50 and over &#9679 Tel Aviv
+                            </p>
                             <div class="hours">
                                 <button>14:00</button>
                                 <button>15:00</button>
@@ -138,31 +138,31 @@
                                 <button>18:00</button>
                             </div>
                         </div>
-                    </div>                    
-                    <div class="col-2">
+                    </div>
+                    <div class="col-3">
                         <div class="contact">
                             <h3>Contact</h3>
                             <div class="contactPhone">
                                 <img src="images/phone.png" alt="phone" style="width: 20%;" >
                                 <h4>03-5178568</h4>
-                            </div>                  
-                            <a href="https://www.thai-house.co.il/">Website</a>                    
+                            </div>
+                            <a href="https://www.thai-house.co.il/" class="website_button">Website</a>
                         </div>
-                    </div>           
+                    </div>
                 </div><br>
-                
+
                 <div class="resturant">
-                    <div class="col-2">
+                    <div class="col-3">
                         <div class="images">
                             <img src="images/taizu.png" alt="Taizu" style="width: 80%;">
                         </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-6">
                         <div class="text">
                             <h1>Taizu</h1>
                             <p>
                                 Asian &#9679 50 and over &#9679 Tel Aviv
-                            </p>                              
+                            </p>
                             <div class="hours">
                                 <button>14:00</button>
                                 <button>15:00</button>
@@ -172,30 +172,30 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-3">
                         <div class="contact">
                             <h3>Contact</h3>
                             <div class="contactPhone">
                                 <img src="images/phone.png" alt="phone" width="20%" >
                                 <h4>03-5225005</h4>
-                            </div>                            
-                            <a href="https://www.taizu.co.il/">Website</a>                    
+                            </div>
+                            <a href="https://www.taizu.co.il/" class="website_button">Website</a>
                         </div>
-                    </div>       
+                    </div>
                 </div><br>
 
                 <div class="resturant">
-                    <div class="col-2">
+                    <div class="col-3">
                         <div class="images">
-                            <img src="images/Cramim.png" alt="Cramim" style="width: 80%;" > 
+                            <img src="images/Cramim.png" alt="Cramim" style="width: 80%;" >
                         </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-6">
                         <div class="text">
                             <h1>Cramim</h1>
                             <p>
                                 Steak House &#9679 30-50 &#9679 Beer Sheva
-                            </p> 
+                            </p>
                             <div class="hours">
                                 <button>14:00</button>
                                 <button>15:00</button>
@@ -204,15 +204,15 @@
                                 <button>18:00</button>
                             </div>
                         </div>
-                    </div>                    
-                    <div class="col-2">
+                    </div>
+                    <div class="col-3">
                         <div class="contact">
                             <h3>Contact</h3>
                             <div class="contactPhone">
                                 <img src="images/phone.png" alt="phone" style="width: 20%;" >
                                 <h4>08-9966444</h4>
-                            </div>                  
-                            <a href="https://www.cramimrest.co.il/%D7%9B%D7%A8%D7%9E%D7%99%D7%9D-%D7%91%D7%90%D7%A8-%D7%A9%D7%91%D7%A2/">Website</a>                    
+                            </div>
+                            <a href="https://www.cramimrest.co.il/%D7%9B%D7%A8%D7%9E%D7%99%D7%9D-%D7%91%D7%90%D7%A8-%D7%A9%D7%91%D7%A2/" class="website_button">Website</a>
                         </div>
                     </div>           
                 </div>
